# auto-emissions

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
app/: example_read.py  example_send.py
app/python/: program_id.py  requirements.txt
app/python/accounts/: __init__.py  group.py  participant.py  protocol.py
app/python/errors/: custom.py
app/python/instructions/: __init__.py  add_group.py  add_participant.py  claim_tokens.py  deposit_tokens.py  get_entitled_amount.py  get_unlocked_amount.py  init.py  remove_group.py  remove_participant.py  set_authority.py  set_group_config.py  set_participant_config.py  set_protocol_config.py  set_test_time.py  withdraw_tokens.py
app/python/types/: __init__.py  add_group_params.py  add_participant_params.py  claim_tokens_params.py  deposit_tokens_params.py  get_entitled_amount_params.py  get_unlocked_amount_params.py  init_params.py  remove_group_params.py  remove_participant_params.py  set_authority_params.py  set_group_config_params.py  set_test_time_params.py  (+3 more)
programs/auto-emissions/: Cargo.toml
programs/auto-emissions/src/: constants.rs  error.rs  instructions.rs  lib.rs  math.rs  state.rs  utils.rs
programs/auto-emissions/src/instructions/: add_group.rs  add_participant.rs  claim_tokens.rs  deposit_tokens.rs  get_entitled_amount.rs  get_unlocked_amount.rs  init.rs  remove_group.rs  remove_participant.rs  set_authority.rs  set_group_config.rs  set_participant_config.rs  set_protocol_config.rs  set_test_time.rs  withdraw_tokens.rs
programs/auto-emissions/src/state/: group.rs  participant.rs  protocol.rs
tests/: test_client.ts  tests.ts
